--- a/stan-overview/exercises/1.2/Ex_1_slides.Rmd
+++ b/stan-overview/exercises/1.2/Ex_1_slides.Rmd
@@ -5,35 +5,9 @@ output:
     widescreen: true
     smaller: true
 ---
-## Using a Categorical Distribution to Roll the Dice
-
-Definition from [the wikipedia](https://en.wikipedia.org/wiki/Categorical_distribution) (abridged):
-
-> A categorical distribution describes the possible results of a random variable that can take on one of $K$
-> possible outcomes (often referred to as categories),
-> with the probability of each outcome separately specified.
-> There is no innate underlying ordering of these outcomes,
-> but numerical labels $1$ to $K$ are often used for convenience in describing the distribution.
-> The parameters specifying the probabilities of each possible outcome must be in the range $0$ to $1$
-> and must sum to $1$.
-
-> The categorical distribution is the generalization of the Bernoulli distribution for a categorical random variable,
-> i.e. for a discrete variable with more than two possible outcomes, such as the roll of a die. 
-
-The probability mass function for a categorical random variable $X$
-which has vector of probabilities $\theta$ is:
-
-> $p(\, x=i \, \vert \, \theta \,) = {\theta}_i$
-
-Stan provides the function `categorial_rng` which
-takes as its argument a $K$-simplex distribution parameter $\theta$
-and generates a categorical variate,
-i.e., an integer $x$ in $\{ 1,\ldots, \ K \}$.
-This function may only be used in generated quantities block.
-
 ## Nice Dice:  the Platonic Solids
 
-More from [the wikipedia](https://en.wikipedia.org/wiki/Platonic_solid):
+Definition of a Platonic solid from [the wikipedia](https://en.wikipedia.org/wiki/Platonic_solid):
 
 > In three-dimensional space, a Platonic solid is a regular, convex polyhedron.
 > It is constructed by congruent, regular, polygonal faces
@@ -52,6 +26,43 @@ Therefore we can model the vector of outcome probabilities $\theta$ for a fair d
 in the shape of a platonic solid 
 with $N$ faces as an $N$-length simplex where all entries have probability $\frac{1}{N}$.
 
+## Nominal numbers
+
+Definition of nominal numbers from [the wikipedia](https://en.wikipedia.org/wiki/Nominal_number):
+
+> Nominal numbers or categorical numbers are numeric codes, meaning numerals used for labelling or identification only.
+> The values of the numerals are irrelevant, and they do not indicate quantity, rank, or any other measurement.
+
+## Flipping Coins:  the Bernoulli and Binomial Distributions
+
+The Bernoulli distribution is used to model binary outcomes, e.g.
+1/0,  yes/no, heads/talls, success/fail.
+
+* parameter:  probability of success $\theta$, (a single number in $\left[0,1\right]$)
+* data generating process is called a "Bernoulli trial"
+
+The Binomial distribution is used to model the total number of successes
+observed in $N$ Bernoulli trials
+
+* parameters: $N$ number of trials, $\theta$ probability of success
+* generalization of the Bernoulli from 1 trial to $N$ trials
+* name:  "bi" == two, "nomial" == nominal numbers!
+
+## Rolling Dice: the Categorical and Multinomial Distributions
+
+The Categorical distribution is used to model a fixed number $K$ of discrete outcomes
+when there is no innate underlying ordering of these outcomes,
+e.g. possible outcomes from rolling a 6-sided die:  $\{ 1 \ldots 6 \}$.
+
+* parameter:  $\theta$, a $K$-length vector of nonzero probabilities which sums to $1$.
+* generalization of the Bernoulli from 2 outcomes to $K$ outcomes  (but just one trial)
+
+The Multinomial distribution models the total number of outcomes for each of $K$ categories
+observed in $N$ trials, where each category has a fixed success probability.
+
+* parameters: $N$ number of trials, $\theta$ $K$-length vector of probability of success 
+* generalization of the Binomial from 2 outcomes to $K$ outcomes
+
 ## Example:  the Magic 8-Ball
 
 At the heart of every true Magic 8-Ball is a 20-sided die.
@@ -61,13 +72,19 @@ knitr::include_graphics("m8ball-patent.png")
 
 ## `gen_magic8.stan`
 
+Stan provides the function `categorial_rng` which
+takes as its argument a $K$-simplex distribution parameter $\theta$
+and generates a categorical variate,
+i.e., an integer $x$ in $\{ 1,\ldots, \ K \}$.
+This function may only be used in generated quantities block.
+
 We can easily simulate the behavior of the Magic 8-Ball using
 Stan's `categorical_rng` function.
 We use Stan's `print` function to print out the message
 corresponding to each outcome.  (Note: intended use of `print` function
 is for debugging purposes.)
 
-The following is an abridged version of Stan program `gen_magic8.stan`:
+The following is the abridged version of Stan program `gen_magic8.stan`:
 
 ```
 // simulate Magic 8-Ball
@@ -78,15 +95,16 @@ generated quantities {
   int ans = categorical_rng(theta);
   if (ans == 1) print("It is certain");
   if (ans == 2) print("It is decidedly so");
-  if (ans == 3) print("Without a doubt");
 ...
-  if (ans == 18) print("My sources say no");
   if (ans == 19) print("Outlook not so good");
   if (ans == 20) print("Very doubtful");
 }
 ```
+\pagebreak
 
-## RStan workflow, command `stan`
+## RStan workflow for this set of exercises
+
+## `stan`
 
 The RStan function `stan` generates a sample consisting of a set of draws given a Stan model (and data, as needed).
 
@@ -100,10 +118,10 @@ therefore, `stan` function must be invoked with `algorithm="Fixed_param"`:
 > fit_8ball = stan(file="gen_magic8.stan", algorithm="Fixed_param")
 ```
 
-## RStan workflow, command `print(<stanfit>)`
+## `print(<stanfit>)`
 
-The functions `print` and `summary` provide information about the sample and the controls used to generate it.
-It provides summary statistics for parameters and quantities of interest defined in the model.
+The `print` provides information about the sample and the controls used to generate it.
+It prints summary statistics for parameters and quantities of interest defined in the model.
 Here, the generated quantity `ans` is the outcome of one roll of a 20-sided die:
 ```
 > print(fit_8ball)
@@ -115,7 +133,7 @@ post-warmup draws per chain=1000, total post-warmup draws=4000.
 ans  10.49    0.09 5.7    1   6  11  15    20  3794    1
 ```
 
-## RStan workflow, commands `extract`, `as.array`, `as.matrix`, `as.data.frame`
+## `extract`, `as.array`, `as.matrix`, `as.data.frame`
 
 The convenience functions `extract`, `as.array`, `as.matrix`, `as.data.frame` retrieve
 the individual parameters and quantities of interest defined in the model as R objects.
@@ -141,29 +159,36 @@ To access the generated quantity `ans` as a single vector of 4000 outcomes, use 
 
 ## Exercise 1:  Roll a single fair dice.
 
-* Write a program `gen_roll_d6.stan` to simulate one roll of a fair 6-sided die.
-	+ Use RStan function `stan` to generate a sample consisting of 4000 draws
-	+ Get the vector of all 4000 outcomes
-	+ Bin the outcomes, retrieve observed values for parameter `theta`
+* Write a program `gen_d6.stan` to simulate one roll of a fair 6-sided die.
+    + Use RStan function `stan` to generate a sample consisting of 4000 draws
+    + Get the vector of all 4000 outcomes
+    + Bin the outcomes, retrieve observed values for parameter `theta`
 
-* Generalize this to program `gen_roll_platonic.stan` to simulate one roll of any platonic solid.
 
-## Exercise 2: load the die.
+## Exercise 2: Load the die.
 
-* Modify program `gen_roll_d6.stan` so that there is a higher chance of rolling a 6.
-	+ Use RStan function `stan` to generate a sample consisting of 4000 draws
-	+ Get the vector of all 4000 outcomes
-	+ Bin the outcomes, retrieve observed values for parameter `theta` - do they correspond to your loading of the die?
+* Modify program `gen_d6.stan` so that there is a higher chance of rolling a 6.
+    + Use RStan function `stan` to generate a sample consisting of 4000 draws
+    + Get the vector of all 4000 outcomes
+    + Bin the outcomes, retrieve observed values for parameter `theta` - do they correspond to your loading of the die?
 
-## Exercise 3: generate sum of multiple rolls
+## Exercise 3: Generate sum of multiple rolls for any platonic solid
 
-* Write a Stan program which generates the sum of 3 rolls of a fair, 6-sided die.
+The Stan language provides array operations which take arrays as input and produce single output values,
+among these are `min`, `max`, `sum`, and many more (see the Stan Reference Manual, section "Array Operations").
 
-* Write a Stan program which generates the sum of the best 3 out of 4 rolls of a fair, 6-sided die.
+* Generalize program `gen_d6.stan` to `gen_sum_N_rolls_dK.stan` so that it outputs the sum of N rolls of any platonic solid with number of faces K.
+    + calculate the expectation of the sum of 4 rolls of a D6
+    + calculate the expectation of the sum of 2 rolls of a D12
+    + use R function `hist` to visualize the resulting distribution of sums - compare and constrast
 
-* For each model:
-	+ Use RStan function `stan` to generate a sample consisting of 4000 draws for each model
-	+ Get the vector of all 4000 outcomes
-	+ Use R function `hist` to visualize the resulting distribution of totals.
+## Exercise 4: More games
 
+* Write a Stan program `gen_sum_best_3_of_4_d6.stan` which generates the sum of the best 3 out of 4 rolls of a fair, 6-sided die.
+
+* Compare `gen_sum_best_3_of_4_d6.stan` to the result of running `gen_sum_N_rolls_dK.stan` for 3 rolls of a 6-sided die.
+    + Use RStan function `stan` to generate a sample consisting of 4000 draws for each model
+    + Get the vector of all 4000 outcomes
+    + use R function `hist` to visualize the resulting distribution of sums - compare and constrast
+    + use R function `hist` to visualize the resulting distribution of sums.
 
