--- a/stan-overview/exercises/2.2/slides.Rmd
+++ b/stan-overview/exercises/2.2/slides.Rmd
@@ -12,6 +12,7 @@ library(shinystan)
 library(rstan)
 rstan_options(auto_write = TRUE)
 options(mc.cores = parallel::detectCores())
+set.seed(1234)
 
 N = 5
 K = 3
@@ -33,7 +34,7 @@ model = stan_model("model.stan")
 ## Problem fit
 
 ```{r, cache=T, message=F}
-fit = sampling(model, list(y=y, N=N, X=X))
+fit = sampling(model, list(y=y, N=N, X=X), seed=1234)
 ```
 
 ## Warnings
@@ -61,7 +62,7 @@ model2 = stan_model("model2.stan")
 ## Now with 100% more priors!
 
 ```{r, cache=T, message=F}
-fit2 = sampling(model2, list(y=y, N=N, X=X))
+fit2 = sampling(model2, list(y=y, N=N, X=X), seed=1234)
 ```
 ```{r}
 fit2
@@ -76,7 +77,7 @@ pairs(fit2, pars = c('alpha', 'beta[1]', 'sigma'))
 
 ```{r, cache=T, message=F, echo=T}
 fit2.1 = sampling(model2, list(y=y, N=N, X=X),
-               control=list(adapt_delta=0.99))
+               control=list(adapt_delta=0.99), seed=1234)
 ```
 
 ## The more careful fit
@@ -98,7 +99,7 @@ model3 = stan_model("model3.stan")
 
 ## Fit
 ```{r, cache=T, message=F, echo=T}
-fit3 = sampling(model3, list(y=y, N=N, X=X))
+fit3 = sampling(model3, list(y=y, N=N, X=X), seed=1234)
 ```
 
 ## More informative prior fit
@@ -122,7 +123,7 @@ model3ppc = stan_model("model3ppc.stan")
 ```
 
 ```{r, include=F}
-fit3ppc = sampling(model3ppc, list(y=y, N=N, X=X))
+fit3ppc = sampling(model3ppc, list(y=y, N=N, X=X), seed=1234)
 ```
 
 ## Shinystan
@@ -144,3 +145,4 @@ fit3
 ```
 
 ## Non-identified!
+- beta[1:3], alpha, sigma vs. 5 datapoints
